styling dashboard, login, logout (basic with no functionality)

--- a/src/templates/account/dashboard.html
+++ b/src/templates/account/dashboard.html
@@ -1,17 +1,22 @@
 {% extends 'account/base.html' %}
 
-
 {% block content %}
-    <h1>SMK Computer-Based Test (CBT)</h1>
+<div class="dashboard-container">
+    <div class="actions">
+        <a class="action active" href="/dashboard">POSTS (1)</a>
+        <a class="action " href="/dashboard/user_followers">Followers (0)</a>
+        <a class="action " href="/dashboard/following_users">Following (0)</a>
+    </div>
 
-    
     {% for ul in ulangan %}
-        <ol>
-            <li>{{ ul.mata_pelajaran }} by <em>{{ ul.guru }}</em> | {{ ul.kelas }}</li>
-        </ol>
+    <div class="single-article">
+        <a href=""><h2>{{ ul.mata_pelajaran }}</h2></a>
+        <div class="dashboard-actions">
+            <a href="" class="cta pill yellow">{{ ul.guru }}</a>
+            <a href="" class="cta pill green">{{ ul.kelas }}</a>
+            <a href="" data-no-instant="" class="cta pill black">{{ ul.mata_pelajaran }}</a>
+        </div>  
+    </div>
     {% endfor %}
-        
-
-    <p>Click <a href="{% url 'logout' %}">here</a> to logout</p>
+</div>
 {% endblock content %}
-    
