--- a/src/templates/account/base.html
+++ b/src/templates/account/base.html
@@ -4,13 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">\
+    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     
     <title>{% block title %}Account{% endblock title %}</title>
         
 </head>
 <body>
     
+    {% include 'account/nav.html' %}
+        
     {% block content %}
     <h1>Account</h1>
     
@@ -20,8 +24,8 @@
 
     <img src="{% static 'img/ladybug.jpg' %}" alt="Picture of Ladybug">  
     {% endblock content %}
-        
     
+    {% include 'account/footer.html' %}
         
 </body>
 </html>
