--- a/src/templates/registration/logged_out.html
+++ b/src/templates/registration/logged_out.html
@@ -4,7 +4,9 @@
 {% block title %}Logged out{% endblock title %}
 
 {% block content %}
+<div class="login-container">
     <h1>Logged out</h1>
     <p>You have been successfully logged out. 
         You can <a href="{% url 'login' %}">login</a> again.</p>
+</div>
 {% endblock content %}
